# rust-compare

./: Cargo.toml  LICENSE  README.md  build.rs
input tests/: 2.1 - Copy.xlsx  4.1 - Copy.xlsx  MJM_SussexUniversityHosp_Acute_241105_BofQ_v8.0.xlsx  MJM_SussexUniversityHosp_Acute_241119_BofQ_v8.2.xlsx
src/: main.rs
templates/: column_matching.html  index.html  results_page.html  sheet_selection.html  summary_page.html
