[package]
name = "excel-compare"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
actix-multipart = "0.6"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
calamine = "0.22"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
log = "0.4"
rust_xlsxwriter = "0.38"  # For writing Excel files
itertools = "0.12"  # For efficient iteration and comparison
webbrowser = "0.8"
