[package]
name = "compare"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.2"
actix-multipart = "0.6.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
calamine = "0.22.1"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.20"
rust_xlsxwriter = "0.40.0"  # For writing Excel files
itertools = "0.12.0"  # For efficient iteration and comparison
webbrowser = "0.8.10"
rfd = "0.12.1"
open = "5.0.1"

[build-dependencies]
